--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -28,6 +28,7 @@ body {
   box-sizing: border-box;
   background-color: $color-black;
   color: $color-white;
+  overflow-x: hidden;
 }
 
 main {
