--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  &__headline,
+  &__textbox,
+  &__cta {
+    grid-column: 1 / span 1;
+  }
+
   &__headline {
     width: 85%;
     font-size: 15rem;
@@ -43,9 +49,9 @@
       font-size: 10rem;
     }
     @include for-tablet-landscape-down {
-      width: 100%;
+      width: 90%;
+      font-size: 10rem;
     }
-    grid-column: 1 / 2;
     grid-row: 3 / span 1;
   }
 
@@ -65,12 +71,10 @@
     @include for-tablet-landscape-down {
       width: 90%;
     }
-    grid-column: 1 / 2;
     grid-row: 4 / span 1;
   }
 
   &__cta {
-    grid-column: 1 / span 1;
     grid-row: 5 / span 1;
     align-self: center;
     justify-self: center;
