--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -3,20 +3,35 @@
 /* -------------------------------------------------------------------------- */
 
 .project {
+  position: relative;
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 66% auto;
   align-items: center;
-  justify-content: center;
-  gap: 4rem;
+  justify-content: space-between;
+  // gap: 4rem;
+  @include for-laptop-down {
+    // flex-wrap: wrap;
+  }
 
   &__panel {
-    width: 66%;
+    @include for-laptop-down {
+      // width: 100%;
+    }
   }
 
   &__image {
+    width: 200%;
+    margin-left: 5rem;
     z-index: -1;
-    overflow: hidden;
     padding: 0;
+    &:hover {
+      width: 200%;
+      img {
+        width: 200%;
+      }
+    }
+
     img {
       width: 100%;
     }
